Updated about section

--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@
   
       <!-- Hero image -->
       <section>
-        <div class="container-fluid">
-          <div class="row hero-image">
-          <img src="images/hero-image.jpg">
+        <div class="container-fluid px-0">
+          <div class="row mx-0 hero-image">
+          <img class="img-fluid w-100" src="images/hero-image.jpg">
         </div>
         </div>
       </section>
@@ -61,31 +61,22 @@
         </div>
       </section>
   
-       <!-- Two Columns Section -->
-      <section>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-6 column">Column</div>
-            <div class="col-lg-6 column">Column</div>
-          </div>
-          <img src="images/spritz.jpg">
-        </div>
-      </section>
-  
       <footer>
-        <div class="container-xxl">
-          <div class="footer">
-          <h1 class="footer__heading">COME DINE WITH US</h1>
-          <hr class="footer__line">
-          <p class="footer__hours">Tues: 4pm to late</p>
-          <p class="footer__hours">Wed to Sun: 12pm to late</p>
-          <div class="footer__phone">  
-          <span itemprop="telephone"> 
-          <a class="footer__phone-link" href="tel:03-93265033">03 9326 5033</a>
-          </span>
+        <div class="container-fluid px-0">
+          <div class="row mx-0">
+            <div class="footer">
+              <h1 class="footer__heading">COME DINE WITH US</h1>
+              <hr class="footer__line">
+              <p class="footer__hours">Tues: 4pm to late</p>
+              <p class="footer__hours">Wed to Sun: 12pm to late</p>
+              <div class="footer__phone">  
+                <span itemprop="telephone"> 
+                <a class="footer__phone-link" href="tel:03-93265033">03 9326 5033</a>
+                </span>
+              </div>
           </div>
         </div>
-        </div>
+      </div>
       </footer>
   
 </body>
