--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,9 @@
   <section> 
     <div> 
       <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar__logo" href="#"><img src="images/logo.svg" alt="Three Crowns Hotel Logo">
-        </a>
+        <div class="navbar__logo" href="#"><img src="images/logo.svg" alt="Three Crowns Hotel Logo">
+      </div> 
+         
         <button
           class="navbar-toggler navbar-light"
           type="button"
@@ -58,6 +59,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#book"><button class="navbar__button-book">BOOK A TABLE</button></a>
             </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="#test">TEST</a>
+            </li> -->
           </ul>
         </div>
       </nav>
@@ -71,6 +75,7 @@
           <button class="navbar__button-book">BOOK A TABLE</button>
         </div>
        </nav> -->
+       
     <!-- Hero image -->
         <div>
           <img class="hero-image" src="images/hero-image.jpg" alt="People eating and drinking at a table">
@@ -86,7 +91,7 @@
               <div class="about__text"> 
                 <h1 class="about__heading">GREAT FOOD, BOOZE & PEOPLE</h1>
                 <hr class="about__line">
-                <p class="about__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos amet dolor rem, dolores inventore voluptates illum molestiae vero. Sed quas ea sunt reprehenderit quia in repudiandae architecto a itaque nam.</p>
+                <p class="about__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod maxime sit asperiores consectetur temporibus. Aut doloremque quisquam placeat aperiam praesentium, voluptatem neque dolor vero officia. Obcaecati hic magnam ut. Eius?.</p>
               </div>   
             </div>
           </div>
@@ -97,14 +102,14 @@
     <section>
       <div class="container-fluid px-0">
         <div class="row mx-0">
-          <div class="block col">
+          <div class="block col-lg-6">
             <div class="block__text">
               <h1 class="block__heading">LOCATION</h1>
-              <hr class="about__line">
+              <hr class="block__line">
               <p class="block__para">365 Victoria St, West Melbourne VIC 3003</p>
             </div>
           </div>
-          <div class="col">
+          <div class="col-lg-6">
             <img class="block-image-right" src="images/spritz.jpg">
           </div>
         </div>
