fixed footer to be responsive

--- a/src/index.html
+++ b/src/index.html
@@ -109,15 +109,17 @@
         <div class="container-fluid px-0">
           <div class="row mx-0">
             <div class="footer">
-              <h1 class="footer__heading">COME DINE WITH US</h1>
-              <hr class="footer__line">
-              <p class="footer__hours">Tues: 4pm to late</p>
-              <p class="footer__hours">Wed to Sun: 12pm to late</p>
-              <div class="footer__phone">  
-                <span itemprop="telephone"> 
-                <a class="footer__phone-link" href="tel:03-93265033">03 9326 5033</a>
-                </span>
-              </div>
+              <div class="footer__text"> 
+                <h1 class="footer__heading">COME DINE WITH US</h1>
+                <hr class="footer__line">
+                <p class="footer__hours">Tues: 4pm to late</p>
+                <p class="footer__hours">Wed to Sun: 12pm to late</p>
+                <div class="footer__phone">  
+                  <span itemprop="telephone"> 
+                  <a class="footer__phone-link" href="tel:03-93265033">03 9326 5033</a>
+                  </span>
+                </div>
+              </div>   
           </div>
         </div>
       </div>
