--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
        <!-- Two Columns Section -->
     <section>
       <div class="container-fluid px-0">
-        <div class="row mx-0">
+        <div class="row no-gutters">
           <div class="block col-lg-6">
             <div class="block__text">
               <h1 class="block__heading">LOCATION</h1>
@@ -105,6 +105,47 @@
       </div>
     </section>
 
+    <section>
+      <div class="container-fluid px-0">
+        <div class="row no-gutters">
+          <div class="col-lg-6">
+            <img class="block-image-right" src="images/steak.jpg">
+          </div>
+          <div class="block col-lg-6">
+            <div class="block__text">
+              <h1 class="block__heading">OPEN HOURS</h1>
+              <hr class="block__line">
+              <p class="block__para">Tues: 4pm to late</p>
+              <p class="block__para">Wed to Sun: 12pm to late</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container-fluid px-0">
+        <div class="row no-gutters">
+          <div class="block col-lg-6">
+            <div class="block__text">
+              <h1 class="block__heading">CONTACT</h1>
+              <hr class="block__line">
+              <p class="block__para">info@threecrownshotel.com.au</p>
+              <div class="block__phone">  
+                <span itemprop="telephone"> 
+                <a class="block__phone-link" href="tel:03-93265033">03 9326 5033</a>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <img class="block-image-right" src="images/burger.jpg">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
       <footer>
         <div class="container-fluid px-0">
           <div class="row mx-0">
@@ -123,7 +164,7 @@
           </div>
         </div>
       </div>
-      </footer>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
