--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three Crowns Hotel</title>
-    <link rel="stylesheet" href="scss/main.scss"> 
     
         <!-- bootstrap -->
         <link
@@ -14,6 +13,10 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
         crossorigin="anonymous"
         />
+
+        <link rel="stylesheet" href="scss/main.scss"> 
+
+
         <!-- Google fonts -->
         <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
@@ -107,7 +110,7 @@
 
     <section>
       <div class="container-fluid px-0">
-        <div class="row no-gutters">
+        <div class="row no-gutters flex-column-reverse flex-lg-row">
           <div class="col-lg-6">
             <img class="block-image-right" src="images/steak.jpg">
           </div>
