add footer socials

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,11 @@
       <footer>
         <div class="container-fluid px-0">
           <div class="row mx-0">
-            <div class="footer">
+            <div class="footer"> 
+                <div class="footer__socials">
+                  <a href="#" target="_blank" class="footer__socials-button fa fa-facebook fa-2x"></a>
+                  <a href="#" target="_blank" class="footer__socials-button fa fa-instagram fa-2x"></a>
+                </div> 
               <div class="footer__text"> 
                 <h1 class="footer__heading">COME DINE WITH US</h1>
                 <hr class="footer__line">
@@ -163,9 +167,9 @@
                   <a class="footer__phone-link" href="tel:03-93265033">03 9326 5033</a>
                   </span>
                 </div>
-              </div>   
+              </div> 
           </div>
-        </div>
+        </div> 
       </div>
     </footer>
     
