--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-AU" dir="ltr">
   <head>
     <meta charset="UTF-8" name="format-detection" content="telephone=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -93,7 +93,7 @@
               <h1 class="about__heading">GREAT FOOD, BOOZE & PEOPLE</h1>
               <hr class="about__line" />
               <p class="about__para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+                Lorem ipsum dolor sit amet consectetur adi pisicing elit. Quod
                 maxime sit asperiores consectetur temporibus. Aut doloremque
                 quisquam placeat aperiam praesentium, voluptatem neque dolor
                 vero officia. Obcaecati hic magnam ut. Eius?.
@@ -218,12 +218,12 @@
               </div>
               <div class="footer__socials">
                 <a
-                  href="#"
+                  href="https://www.facebook.com/threecrownshotel"
                   target="_blank"
                   class="footer__socials-button fa fa-facebook fa-2x"
                 ></a>
                 <a
-                  href="#"
+                  href="https://www.instagram.com/threecrownshotel/?hl=en"
                   target="_blank"
                   class="footer__socials-button fa fa-instagram fa-2x"
                 ></a>
