navbar change to flexbox

--- a/src/menu.html
+++ b/src/menu.html
@@ -7,7 +7,6 @@
     <title>Three Crowns Hotel</title>
 
     <!-- bootstrap -->
-
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -16,7 +15,6 @@
     />
 
     <!-- CSS -->
-
     <link rel="stylesheet" href="scss/main.scss" />
 
     <!-- Google fonts -->
@@ -33,173 +31,172 @@
     ></script>
   </head>
   <body>
-       <!-- Nav bar  -->
-       <header>
-        <nav id="menuNavbar" class="navbar navbar-expand-md">
-          <button
-            class="navbar-toggler navbar-light"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
+
+  <!-- Nav bar  -->
+  <header>
+  <nav id="menuNavbar" class="navbar navbar-expand-md">
+    <button
+      class="navbar-toggler navbar-light"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarTogglerDemo03"
+      aria-controls="navbarTogglerDemo03"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar__logo" href="/"
+      ><img src="images/logo.svg" alt="Three Crowns Hotel Logo"
+    /></a>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+      <ul class="navbar-nav mr-auto mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html"
+            ><button class="navbar__button-menu">Home</button></a
           >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar__logo" href="/"
-            ><img src="images/logo.svg" alt="Three Crowns Hotel Logo"
-          /></a>
-  
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html"
-                  ><button class="navbar__button-menu">HOME</button></a
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#book"
+            ><button class="navbar__button-book">Book a table</button></a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- About section -->
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row mx-0">
+        <div class="about">
+          <div class="about__text">
+            <h1 class="about__heading">Great food, booze & people</h1>
+            <hr class="about__line" />
+            <p class="about__para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+              maxime sit asperiores consectetur temporibus. Aut doloremque
+              quisquam placeat aperiam praesentium, voluptatem neque dolor
+              vero officia. Obcaecati hic magnam ut. Eius?.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Two Columns Section -->
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row no-gutters flex-column-reverse flex-lg-row">
+        <div class="col-lg-6">
+          <picture>
+            <source
+              media="(max-width:400px)"
+              srcset="images/chicken-wings-cropped.png"
+            />
+            <source srcset="images/chicken-wings.png" />
+            <img
+              class="block-image"
+              src="images/chicken-wings.png"
+              alt="Chicken wings in a basket"
+            />
+          </picture>
+        </div>
+        <div class="menu col-lg-6">
+          <div class="menu__text">
+            <p class="menu__para">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. ntium
+              velit aperiam repellat!
+            </p>
+            <button class="menu__button" onclick="window.location.href='https:/drive.google.com/file/d/15f-QJsmNq4uZlGe4fe39t4LrntfrgPHT/view?usp=sharing'">View food menu</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container-fluid px-0">
+      <div class="row no-gutters">
+        <div class="block col-lg-6">
+          <div class="menu__text">
+            <p class="menu__para">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. ntium
+              velit aperiam repellat!
+            </p>
+            <button class="menu__button">View drinks menu</button>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <picture>
+            <source
+              media="(max-width:400px)"
+              srcset="images/cocktails-cropped.png"
+            />
+            <source srcset="images/cocktails.png" />
+            <img
+              class="block-image"
+              src="images/cocktails.png"
+              alt="Cocktails in different shaped glasses"
+            />
+          </picture>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container-fluid px-0">
+      <div class="row mx-0">
+        <div class="footer">
+          <div class="footer__text">
+            <h1 class="footer__heading">Come dine with us</h1>
+            <hr class="footer__line" />
+            <p class="footer__hours">Tues: 4pm to late</p>
+            <p class="footer__hours">Wed to Sun: 12pm to late</p>
+            <div class="footer__phone">
+              <span itemprop="telephone">
+                <a class="footer__phone-link" href="tel:03-93265033"
+                  >03 9326 5033</a
                 >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#book"
-                  ><button class="navbar__button-book">BOOK A TABLE</button></a
-                >
-              </li>
-            </ul>
-          </div>
-        </nav>
-
-    <!-- About section -->
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row mx-0">
-          <div class="about">
-            <div class="about__text">
-              <h1 class="about__heading">GREAT FOOD, BOOZE & PEOPLE</h1>
-              <hr class="about__line" />
-              <p class="about__para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-                maxime sit asperiores consectetur temporibus. Aut doloremque
-                quisquam placeat aperiam praesentium, voluptatem neque dolor
-                vero officia. Obcaecati hic magnam ut. Eius?.
-              </p>
+              </span>
+            </div>
+            <div class="footer__socials">
+              <a
+                href="#"
+                target="_blank"
+                class="footer__socials-button fa fa-facebook fa-2x"
+              ></a>
+              <a
+                href="#"
+                target="_blank"
+                class="footer__socials-button fa fa-instagram fa-2x"
+              ></a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </footer>
 
-    <!-- Two Columns Section -->
-
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row no-gutters flex-column-reverse flex-lg-row">
-          <div class="col-lg-6">
-            <picture>
-              <source
-                media="(max-width:400px)"
-                srcset="images/chicken-wings-cropped.png"
-              />
-              <source srcset="images/chicken-wings.png" />
-              <img
-                class="block-image"
-                src="images/chicken-wings.png"
-                alt="Chicken wings in a basket"
-              />
-            </picture>
-          </div>
-          <div class="menu col-lg-6">
-            <div class="menu__text">
-              <p class="menu__para">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. ntium
-                velit aperiam repellat!
-              </p>
-              <button class="menu__button">VIEW FOOD MENU</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container-fluid px-0">
-        <div class="row no-gutters">
-          <div class="block col-lg-6">
-            <div class="menu__text">
-              <p class="menu__para">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. ntium
-                velit aperiam repellat!
-              </p>
-              <button class="menu__button">VIEW DRINKS MENU</button>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <picture>
-              <source
-                media="(max-width:400px)"
-                srcset="images/cocktails-cropped.png"
-              />
-              <source srcset="images/cocktails.png" />
-              <img
-                class="block-image"
-                src="images/cocktails.png"
-                alt="Cocktails in different shaped glasses"
-              />
-            </picture>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container-fluid px-0">
-        <div class="row mx-0">
-          <div class="footer">
-            <div class="footer__text">
-              <h1 class="footer__heading">COME DINE WITH US</h1>
-              <hr class="footer__line" />
-              <p class="footer__hours">Tues: 4pm to late</p>
-              <p class="footer__hours">Wed to Sun: 12pm to late</p>
-              <div class="footer__phone">
-                <span itemprop="telephone">
-                  <a class="footer__phone-link" href="tel:03-93265033"
-                    >03 9326 5033</a
-                  >
-                </span>
-              </div>
-              <div class="footer__socials">
-                <a
-                  href="#"
-                  target="_blank"
-                  class="footer__socials-button fa fa-facebook fa-2x"
-                ></a>
-                <a
-                  href="#"
-                  target="_blank"
-                  class="footer__socials-button fa fa-instagram fa-2x"
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-     <!-- Bootstrap Jquery, Popper.js & JavaScript scripts -->
-
-     <script
-     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-     crossorigin="anonymous"
-   ></script>
-   <script
-     src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-     crossorigin="anonymous"
-   ></script>
-   <script
-     src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-     crossorigin="anonymous"
-   ></script>
+    <!-- Bootstrap Jquery, Popper.js & JavaScript scripts -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
