--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,12 @@
     ></script>
   </head>
   <body>
-  
+ 
     <header>
     <!-- Nav bar  -->
-    <nav class="navbar">
-        <ul class="navbar__list">
+    <nav class="navbar" >
+      <ul class="navbar__list">
+        <div class="burgerburger" >&#9776;</div>
           <li >
             <a href="menu.html"
               ><button class="navbar__button-menu">Menus</button></a
@@ -53,7 +54,34 @@
               ><button class="navbar__button-book">Book a table</button>
             </a>
           </li>
-        </ul>
+        </ul>   
+
+        <!-- The overlay -->
+<div id="myNav" class="overlay">
+  <!-- Button to close the overlay navigation -->
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <!-- Overlay content -->
+  <div class="overlay-content">
+    <a href="#book"
+    ><button class="overlay__button-book">Book a table</button>
+  </a>
+  <a href="menu.html"
+              ><button class="overlay__button-menu">Menus</button></a
+            >
+            <div class="overlay__socials">
+              <a
+                href="https://www.facebook.com/threecrownshotel"
+                target="_blank"
+                class="overlay__socials-button fa fa-facebook fa-2x"
+              ></a>
+              <a
+                href="https://www.instagram.com/threecrownshotel/?hl=en"
+                target="_blank"
+                class="overlay__socials-button fa fa-instagram fa-2x"
+              ></a>
+            </div>
+  </div>
+</div>
     </nav>
 
       <!-- Hero image -->
@@ -223,6 +251,10 @@
       </div>
     </footer>
 
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <script src="script.js"> </script>
     <!-- Bootstrap Jquery, Popper.js & JavaScript scripts -->
 
     <script
