--- a/src/menu.html
+++ b/src/menu.html
@@ -34,37 +34,55 @@
 
   <!-- Nav bar  -->
   <header>
-  <nav id="menuNavbar" class="navbar navbar-expand-md">
-    <button
-      class="navbar-toggler navbar-light"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarTogglerDemo03"
-      aria-controls="navbarTogglerDemo03"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar__logo" href="/"
-      ><img src="images/logo.svg" alt="Three Crowns Hotel Logo"
-    /></a>
+     <!-- Nav bar  -->
+     <nav id="menuNavbar" class="navbar" >
+      <ul class="navbar__list">
+        <div class="burgerburger" >&#9776;</div>
+          <li >
+            <a href="menu.html"
+              ><button class="navbar__button-menu">Home</button></a
+            >
+          </li>
+          <li >
+            <a class="navbar__logo" href="/">
+              <img src="images/logo.svg" alt="Three Crowns Hotel Logo"/>
+            </a>
+          </li>
+          <li>
+            <a href="#book"
+              ><button class="navbar__button-book">Book a table</button>
+            </a>
+          </li>
+        </ul>   
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html"
-            ><button class="navbar__button-menu">Home</button></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#book"
-            ><button class="navbar__button-book">Book a table</button></a
-          >
-        </li>
-      </ul>
-    </div>
-  </nav>
+        <!-- The overlay -->
+<div id="myNav" class="overlay">
+  <!-- Button to close the overlay navigation -->
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <!-- Overlay content -->
+  <div class="overlay-content">
+    <a href="#book"
+    ><button class="overlay__button-book">Book a table</button>
+  </a>
+  <a href="menu.html"
+              ><button class="overlay__button-menu">Home</button></a
+            >
+            <div class="overlay__socials">
+              <a
+                href="https://www.facebook.com/threecrownshotel"
+                target="_blank"
+                class="overlay__socials-button fa fa-facebook fa-2x"
+              ></a>
+              <a
+                href="https://www.instagram.com/threecrownshotel/?hl=en"
+                target="_blank"
+                class="overlay__socials-button fa fa-instagram fa-2x"
+              ></a>
+            </div>
+  </div>
+</div>
+    </nav>
+</header>
 
   <!-- About section -->
   <section>
@@ -181,6 +199,11 @@
       </div>
     </div>
   </footer>
+
+   <!-- Jquery -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+   <script src="script.js"> </script>
 
     <!-- Bootstrap Jquery, Popper.js & JavaScript scripts -->
     <script
